# goma

./: .buildinfo  .clang-format  .gitignore  AUTOCONF.TXT  BUILD.md  CHANGELOG.tex  CHANGES.md  CMakeLists.txt  CNAME  Goma_for_guts_rhel5.mk  Make.files  Makefile  Makefile.in  Makefile_debug  Makefile_guts  Makefile_guts_rhel5  ProjectName.cmake  README.md  ac_conti.c  ac_display_parameter.c  ac_hunt.c  ac_hunt.h  ac_loca_interface.c  ac_particles.c  ac_stability_util.c  ac_update_parameter.c  aclocal.m4  background.html  bc_colloc.c  bc_contact.c  bc_curve.c  bc_dirich.h  bc_integ.c  bc_integ.h  bc_rotate.c  bc_rotate.h  bc_special.c  bc_special.h  bc_surfacedomain.h  build_script.diff  (+176 more)
.github/workflows/: build-unit-trilinos-13.yml  build-unit.yml  clang-format-check.yml  doc-check.yml  gh-pages.yml
_sources/: background.rst.txt  introduction.rst.txt  references.rst.txt
_sources/material_file/: electrical.rst.txt  mechanical_and_constitutive.rst.txt
_sources/problem_description_file/: eigensolver.rst.txt  post_processing_averages.rst.txt  problem_description.rst.txt  rotation.rst.txt  solver_specifications.rst.txt
_static/: documentation_options.js  pygments.css
cmake/: CMakeScripts.cmake  FindARPACK.cmake  FindMETIS.cmake  FindMUMPS.cmake  FindPARPACK.cmake  FindSparse.cmake  FindUMFPACK.cmake  cmake_uninstall.cmake.in  debugscript  install.cmake  runscript
docs/: .gitignore  Makefile  Pipfile  README.md  code_structure_and_io.rst  conf.py  documentation_lists.rst  epetra_matrix_format.md  index.rst  library_mode.rst  material_files.rst  parallel_integration.md  problem_description_file.rst  segregated_notes.org  stratimikos.md  stratimikos.xml  user_manual.rst
docs/install_notes/: rhel5.5_gcc4.6.2_saroberts.txt
docs/material_file/: acoustic_properties.rst  electrical.rst  mechanical_and_constitutive.rst  microstructure.rst  moments.rst  physical_properties.rst  shell_equation.rst  source_terms.rst  species.rst  thermal_properties.rst
docs/problem_description_file/: augmenting_conditions.rst  automatic_continuation.rst  boundary_conditions.rst  continuation.rst  electromagnetic_problem_properties.rst  file_specifications.rst  general_specifications.rst  hunting.rst  level_set.rst  linear_stability_analysis.rst  phase_field.rst  post_processing.rst  post_processing_fluxes.rst  post_processing_particle.rst  post_processing_volume.rst  problem_description.rst  rotation.rst  solver_specifications.rst  time_integration.rst  turbulence.rst
include/: ac_conti.h  ac_hunt.h  ac_particles.h  ac_stability.h  ac_stability_util.h  ac_update_parameter.h  acconfig.h  ad_momentum.h  ad_porous.h  ad_stress.h  ad_turbulence.h  base_mesh.h  bc_colloc.h  bc_contact.h  bc_curve.h  bc_dirich.h  bc_integ.h  bc_rotate.h  bc_special.h  bc_surfacedomain.h  brk_utils.h  decomp_interface.h  density.h  dg_utils.h  dp_comm.h  dp_ghost.h  dp_map_comm_vec.h  dp_types.h  dp_utils.h  dp_vif.h  dpi.h  el_elm.h  el_elm_info.h  el_geom.h  el_quality.h  exo_conn.h  exo_struct.h  gm_cgm_c_interface.h  gm_cgm_typedefs.h  gm_cgm_util.h  (+147 more)
include/adapt/: omega_h_interface.h  resetup_problem.h
include/bc/: eqn_index.h  generalized_dirichlet.h  geom.h  rotate.h  rotate_coordinates.h  rotate_util.h  user_geom.h
include/brkfix/: aalloc.h  acconfig.h  bbb.h  brk.h  brkfix.h  brkfix_types.h  config.h  dpi.h  eh.h  emuck.h  exo_conn.h  fix.h  (+15 more)
material_file/: acoustic_properties.html  electrical.html  mechanical_and_constitutive.html  microstructure.html  moments.html  physical_properties.html  shell_equation.html  source_terms.html  species.html  thermal_properties.html
problem_description_file/: augmenting_conditions.html  boundary_conditions.html  continuation.html  eigensolver.html  electromagnetic_problem_properties.html  file_specifications.html  general_specifications.html  hunting.html  level_set.html  phase_field.html  post_processing.html  post_processing_averages.html  post_processing_fluxes.html  post_processing_particle.html  post_processing_volume.html  problem_description.html  rotation.html  solver_specifications.html  time_integration.html  turbulence.html
scripts/: README.md  build-TPL-experimental.sh  build-goma-dep-trilinos-12-noc++11.sh  build-goma-dep-trilinos-12.sh  build-goma-dependencies.sh  build-trilinos-stratimikos  chqa.py  easy-goma-builder.sh  gcc-warnings.json  image_to_vox.py  rotate_xi_eta.py  run-clang-format.sh  spack.yaml  user-interaction.sh
src/: .mm_input_bc.c.swp  .mm_input_mp.c.swp  CMakeLists.txt  Makefile  ac_conti.c  ac_display_parameter.c  ac_hunt.c  ac_loca_interface.c  ac_particles.c  ac_stability.c  ac_stability_util.c  ac_update_parameter.c  ad_momentum.cpp  ad_porous.cpp  ad_stress.cpp  ad_turbulence.cpp  base_mesh.c  bc_colloc.c  bc_colloc_rot.c  bc_contact.c  bc_curve.c  bc_dirich.c  bc_integ.c  bc_rotate.c  bc_special.c  bc_surfacedomain.c  brk_utils.c  decomp_interface.c  density.c  dg_utils.c  dp_comm.c  dp_ghost.cpp  dp_map_comm_vec.c  dp_utils.c  dp_vif.c  el_elm_info.c  el_quality.c  exo_conn.c  fix_main.c  globals.c  (+152 more)
src/adapt/: omega_h_interface.cpp  resetup_problem.c
src/bc/: eqn_index.c  generalized_dirichlet.c  geom.c  rotate.c  rotate_coordinates.c  rotate_util.c  user_geom.c
src/brkfix/: .gitignore  AUTHORS  Makefile  aalloc.c  bbb.c  brk.c  brk_exo_file.c  eh.c  emuck.c  exo_conn.c  exo_utils.c  fix.c  fix_exo_file.c  mk_dm.c  ppi.c  rd_dpi.c  rd_exo.c  rd_in.c  sam_perea.c  setup_fix_data.cpp  utils.c  wr_coords.c  wr_dpi.c  wr_exo.c  wr_graph_file.c
src/gds/: gds_vector.c
src/linalg/: sparse_matrix.cpp  sparse_matrix_epetra.cpp  sparse_matrix_tpetra.cpp
src/ls/: create_facets.cpp  facet_based_reinit.cpp  facet_reinitialization.cpp
src/models/: fluidity.cpp
src/util/: aprepro_helper.cpp  distance_helpers.cpp  facet_helper.cpp  goma_normal.c
tests/: CMakeLists.txt  test_facet_helper.cpp  unit_tests_main.cpp
tests/bc/: rotate_coordinates.cpp  rotate_util.cpp
tests/gds/: gds_vector.cpp
tpls/: Dockerfile  Dockerfile-netlib  Dockerfile-rocky  Dockerfile-rocky-static  Dockerfile-ubuntu  README.md  install-tpls.py
(+1549 files in other folders)
